[1.0] End of major refactoring (to fit to cpp)

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fiona
 future  # python2 only packages
 jinja2
 lxml
+matplotlib  # only required for some snippets
 numpy
 pydot  # only required for Modele.write_topological_graph
 shapely
