Inversion ordre scénario/exe pour scénarios partageant des fichiers
Pour éviter les erreurs de grammaire ensuite, on boucle d'abord sur les exécutables puis sur les scénarios (que l'on convertit en grammaire 1.3 en qualif)

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ future  # python2 only packages
 jinja2
 lxml
 matplotlib  # only required for some snippets
-networkx  # only requried for build_graph
+networkx  # only required for build_graph
 numpy
 # openturns==1.12  # only for snippets.probabilistic_study
 pandas
